contact and footer

--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -2,6 +2,7 @@ $bg-white: #f6f6f6;
 $bg-offer-section: #ffffffcc;
 $bg-white-transparent: #f6f6f674;
 $black-text: #333333;
+$black-text-brighter: #7d7d7d;
 $main-pink: #f254bb;
 $yellow: #FAD075;
 $blue: #65ADF0;
@@ -15,3 +16,4 @@ $little-white-section: #ececec;
 $white-table-price-list: white;
 $little-white-table-price-list: rgb(238, 238, 238);
 $blog: #e0dfdf;
+$footer-bg: #5d5d5d;
