--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1225,6 +1225,7 @@ body {
 			display: flex;
 			flex-direction: column;
 			align-items: center;
+			margin-bottom: 80px;
 		}
 
 		&__trainings-img {
@@ -1304,6 +1305,10 @@ body {
 		background-color: $bg-white;
 		scroll-margin-top: 75px;
 
+		&__box1 {
+			margin-bottom: 80px;
+		}
+
 		&__table {
 			// border: 1px solid $little-gray;
 			margin: 0 auto;
@@ -1378,6 +1383,7 @@ body {
 			display: flex;
 			flex-wrap: wrap;
 			justify-content: center;
+			margin-bottom: 80px;
 		}
 
 		&__box {
@@ -1480,6 +1486,7 @@ body {
 		&__container {
 			margin-top: 40px;
 			padding: 0 14px;
+			
 		}
 
 		&__title-center {
@@ -1555,7 +1562,7 @@ body {
 		}
 
 		&__info-text {
-			margin: 60px 0;
+			margin: 80px 0;
 			font-family: 'fira sans-italic';
 			font-weight: italic;
 			text-align: center;
@@ -1643,6 +1650,10 @@ body {
 .footer {
 	background-color: $footer-bg;
 	color: $bg-white;
+
+	&__box-contact {
+		display: none;
+	}
 
 	&__container {
 		width: 100%;
@@ -1744,12 +1755,14 @@ body {
 	&__project {
 		font-size: 12px;
 		margin: 4px 0;
+		color: $little-gray-darker;
 	}
 
 	&__project-link {
 		text-decoration: none;
 		color: $bg-white;
 		margin-left: 8px;
+		color: $little-gray-darker;
 
 		transition: all 0.2s;
 
