--- a/src/sass/style-trainings.scss
+++ b/src/sass/style-trainings.scss
@@ -3,65 +3,152 @@
 @use './fonts' as *;
 
 .header {
-    &__button {
-        display: none;
-    }
+	&__button {
+		display: none;
+	}
+}
+
+.wrapper-inside {
+	max-width: 850px;
 }
 
 .nav {
-    &__menu-container {
-        display: none;
-    }
-    &__mobile-menu {
-        display: none;
-    }
+	&__menu-container {
+		display: none;
+	}
+	&__mobile-menu {
+		display: none;
+	}
 }
 
 .footer {
-    &__offer {
-        display: none;
-    }
+	&__offer {
+		display: none;
+	}
 
-    &__help {
-        display: none;
-    }
+	&__help {
+		display: none;
+	}
 
-    &__box-contact {
+	&__box-contact {
 		display: block;
 	}
 }
 
-.trainings {
+.h3-title-subsections {
+	position: relative;
+	text-transform: uppercase;
+	font-size: 18px;
+	margin: 5px 0 30px 0;
 
-    .h2-title-sections {
-        position: relative;
-        text-transform: uppercase;
-        font-size: 26px;
-        margin-top: 70px;
-    
-        &::before {
-            content: '';
-            position: absolute;
-            width: 30px;
-            height: 4px;
-            border-radius: 4px;
-            bottom: -16px;
-            left: 0px;
-            background: $main-pink;
-        }
-    }
+	&::before {
+		content: '';
+		position: absolute;
+		width: 30px;
+		height: 4px;
+		border-radius: 4px;
+		bottom: -6px;
+		left: 0px;
+		background: $CTA-green;
+	}
+}
 
-    &__svg-bottom-section {
-        vertical-align: bottom;
-    }
+.trainings-main {
+	.h2-title-sections {
+		position: relative;
+		text-transform: uppercase;
+		font-size: 26px;
+		margin-top: 70px;
 
-    &__container {
+		&::before {
+			content: '';
+			position: absolute;
+			width: 30px;
+			height: 4px;
+			border-radius: 4px;
+			bottom: -16px;
+			left: 0px;
+			background: $main-pink;
+		}
+	}
+
+	&__img {
+		display: none;
+	}
+
+	&__h4 {
+		font-size: 15px;
+		margin-top: 10px;
+	}
+
+	&__svg-bottom-section {
+		vertical-align: bottom;
+	}
+
+	&__container {
+		display: flex;
+		flex-direction: column;
+		margin: 60px 0;
+		width: 100%;
+		padding: 0 14px;
+	}
+
+	&__title {
+		margin: 35px 0 20px 0;
+		font-size: 20px;
+		line-height: 24px;
+	}
+
+	&__text {
+		line-height: 21px;
+		margin-bottom: 35px;
+		width: 100%;
+		text-align: justify;
+	}
+
+	&__box {
+		scroll-margin-top: 60px;
+		background-color: $little-white-section;
+		width: 100%;
+		margin: 50px 0 1px 0;
+		padding: 14px;
+		border-radius: 8px;
+		display: flex;
+		flex-direction: column;
+		align-items: flex-start;
+		border: 1px solid $little-gray;
+		transition: all 0.5s;
+		box-shadow: 2px 3px 6px $little-gray;
+		float: left;
+
+		&:hover {
+			border: 1px solid $black-text-brighter;
+			box-shadow: 3px 5px 10px $little-gray-darker;
+		}
+	}
+
+	&__ul-list {
+		margin: 15px 0 15px 20px;
+		line-height: 21px;
+		font-size: 14px;
+	}
+}
+
+@media (min-width: 992px) {
+    .wrapper-inside {
+        max-width: 850px;
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
+
     }
 
-    &__box {
-        width: 100%;
-        background-color: #ff9090;
-    }
+
+	.trainings-main {
+		&__img {
+            display: block;
+			// width: 10%;
+            // height: 10%;
+			height: auto;
+		}
+	}
 }
