--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1225,7 +1225,7 @@ body {
 			display: flex;
 			flex-direction: column;
 			align-items: center;
-			margin-bottom: 80px;
+			margin-bottom: 20px;
 		}
 
 		&__trainings-img {
@@ -1369,6 +1369,36 @@ body {
 		}
 	}
 
+	.splide {
+
+		margin-top: 60px;
+
+		&__container {
+			padding: 20px;
+			background-color: $little-white-section;
+			border: 1px solid $little-gray;
+			border-radius: 8px;
+		}
+		
+		&__list {
+			display: flex;
+			align-items: center;
+		}
+
+		&__arrow {
+			scale: 1.5;
+			transition: all .3s;
+
+			&:hover {
+				background-color: $main-pink;
+			}
+		}
+		
+	}
+	.splide__pagination__page.is-active {
+		background-color: $main-pink;
+	}
+
 	.blog {
 		scroll-margin-top: 75px;
 
@@ -1486,7 +1516,6 @@ body {
 		&__container {
 			margin-top: 40px;
 			padding: 0 14px;
-			
 		}
 
 		&__title-center {
