--- a/src/sass/style-trainings.scss
+++ b/src/sass/style-trainings.scss
@@ -76,6 +76,30 @@
 		display: none;
 	}
 
+    &__img-mobile {
+        width: 50%;
+        height: auto;
+    }
+
+    &__break-line {
+        width: 100%;
+        height: 1px;
+        background-color: $little-gray;
+        margin: 0 auto;
+        margin-bottom: 35px;
+
+    }
+
+    &__break-line-space-top{
+        margin-top: 35px;
+        margin-bottom: 0px;
+    }
+
+    &__break-line-space-top-bottom {
+        margin-top: 35px;
+        margin-bottom: 35px;
+    }
+
 	&__h4 {
 		font-size: 15px;
 		margin-top: 10px;
@@ -86,6 +110,7 @@
 	}
 
 	&__container {
+        position: relative;
 		display: flex;
 		flex-direction: column;
 		margin: 60px 0;
@@ -104,6 +129,17 @@
 		margin-bottom: 35px;
 		width: 100%;
 		text-align: justify;
+        font-size: 14px;
+	}
+
+    &__text-without-space {
+		margin-bottom: 10px;
+	}
+
+    &__content-without-space {
+		line-height: 21px;
+		text-align: start;
+        font-size: 14px;
 	}
 
 	&__box {
@@ -132,23 +168,76 @@
 		line-height: 21px;
 		font-size: 14px;
 	}
+
+    &__info-box {
+        width: 100%;
+        margin-top: 35px;
+    }
+
+    &__location {
+        margin-top: 35px;
+    }
+
+    &__addres {
+        display: flex;
+        flex-direction: column;
+    }
+
+    &__certificate {
+        width: 100%;
+        margin-top: 15px;
+    }
+
+    &__price {
+        margin-top: 35px;
+    }
+
+    &__content-italic {
+        font-family: 'fira sans-italic';
+        font-weight: italic;
+        display: flex;
+        flex-direction: column;
+    }
 }
 
 @media (min-width: 992px) {
-    .wrapper-inside {
-        max-width: 850px;
-        display: flex;
-        flex-direction: row;
-
-    }
-
 
 	.trainings-main {
+
+        &__img-mobile {
+            display: none;
+        }
+
+        &__content-container {
+            max-width: 800px;
+        }
+
+        &__container {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+        }
+
 		&__img {
             display: block;
-			// width: 10%;
-            // height: 10%;
+			width: 100%;
+            height: 100%;
 			height: auto;
+            position: sticky;
+            top: 10%;
 		}
+
+        &__info-box {
+            width: 100%;
+            margin-top: 35px;
+            display: flex;
+            justify-content: space-around;
+        }
+
+        &__location {
+            margin-top: 0px;
+        }
+
 	}
+
 }
