--- a/src/sass/_large.scss
+++ b/src/sass/_large.scss
@@ -246,6 +246,8 @@
 			}
 
 			&__my-img-big {
+				width: 390px;
+				height: 575px;
 				display: flex;
 				position: absolute;
 				max-width: 100%;
