--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -17,3 +17,4 @@ $white-table-price-list: white;
 $little-white-table-price-list: rgb(238, 238, 238);
 $blog: #e0dfdf;
 $footer-bg: #5d5d5d;
+$white-button: #ffffff;
