--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -4,9 +4,10 @@ $bg-white-transparent: #f6f6f674;
 $black-text: #333333;
 $black-text-brighter: #7d7d7d;
 $main-pink: #f254bb;
+$main-pink-btn: #eb3dae;
 $yellow: #FAD075;
 $blue: #65ADF0;
-$CTA-green: #51d03d;
+$CTA-green: #34c51e;
 $green: #29c83375;
 $orange: #FACA8E;
 $h1-heading: #FFFFFF;
